--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "pinia": "^2.0.0-rc.10",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5"
   },
