--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
+    "chart.js": "^4.4.0",
     "core-js": "^3.8.3",
     "pinia": "^2.0.0-rc.10",
     "vue": "^2.6.14",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^3.6.5"
   },
   "devDependencies": {
